fix ul li spacing again

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -63,7 +63,8 @@ h1, h2, h3, h4, h5, h6 {
 a {    
     text-underline-offset: 3px;
     color: inherit;
-    text-decoration-color: var(--link-color);   
+    text-decoration-color: var(--link-color); 
+    text-decoration-thickness: 0.8px;  
 }
 
 p {
@@ -239,6 +240,11 @@ ul {
     margin-block: 0;
     //list-style: circle;
     li{}
+
+    /* ## Increase the gap between li items without affecting the gap between the list and surrounding elements */
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem; 
 }
 
 li::marker {
@@ -267,7 +273,7 @@ ol {
     list-style-type: none;
    position: relative;
     right: 1rem;
-    padding-block: .5rem;    
+    //padding-block: .5rem;    
 }
 time.blog-list-date{
     font-size: 70%;
@@ -276,7 +282,7 @@ time.blog-list-date{
 }
 
 .home-blog-list ul li, .blog-list ul li{
-    padding-block: 0.4rem;
+    //padding-block: 0.4rem;
     
     /*
     list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="6.25" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="%23f03838" d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>');
